<resources>
    <string name="app_name">W2Solo</string>

    <string name="tab_topics">话题</string>
    <string name="tab_discover">发现</string>
    <string name="tab_me">我的</string>

    <!--    Discover-->
    <string name="discover_tab_new_hackers">New</string>
    <string name="discover_tab_products">Products</string>
    <string name="discover_tab_top_hackers">Top</string>

    <!--    Settings-->
    <string name="w2solo_rules">社区规则</string>
    <string name="group_guide">加入社群</string>
    <string name="group_products">群员产品列表</string>
    <string name="app_feedback">App反馈</string>
    <string name="w2solo_intro">「w2solo.com」独立开发者社区，由众多独立开发者维护，致力于搭建和维护好国内独立开发者圈子和氛围。</string>

    <!--    Account-->
    <string name="error_not_login">请先登录</string>
    <string name="error_login_failed">登录失败：请确认账号密码是否正确</string>
    <string name="click_to_login">点击登录</string>
    <string name="account_avatar_contd">头像</string>

    <string name="title_login">登录 W2Solo 账号</string>
    <string name="login">登录</string>
    <string name="logout">退出</string>
    <string name="logout_confirm_msg">确定退出当前账号吗？</string>
    <string name="logout_contd">退出登录</string>
    <string name="register">注册</string>
    <string name="hint_account">用户ID/邮箱</string>
    <string name="hint_pwd">密码</string>

    <!--    Topic-->
    <string name="title_topic_detail">话题详情</string>
    <string name="topic_replies_count">评论 %1$s</string>
    <!--Comment-->
    <string name="comment_send">回复</string>
    <string name="comment_title">评论区</string>

    <string name="action_excellent">标记为精华帖</string>
    <string name="action_un_excellent">移除加精</string>
    <string name="action_ban">评论已经被屏蔽</string>
    <string name="action_deleted">评论已经被删除</string>
    <string name="action_close">关闭了讨论</string>
    <string name="action_reopen">重新开启了讨论</string>
    <string name="action_unknow">未知操作</string>

    <string name="hint_input_comment">留言回复...</string>
    <string name="comment_option_edit">修改评论</string>
    <string name="comment_option_delete">删除评论</string>
    <string name="comment_option_delete_msg">确定删除你这条评论？</string>

    <string name="comment_time_just_now">刚刚</string>
    <string name="comment_time_in_minutes">%1$s分钟前</string>
    <string name="comment_time_in_hours">%1$s小时前</string>

    <!--    Users-->
    <string name="followed">已关注</string>
    <string name="not_followed">关注</string>
    <string name="user_info_title">资料页</string>
    <string name="title_follower">粉丝</string>
    <string name="title_score">积分</string>
    <string name="title_favorite">收藏</string>
    <string name="title_following">关注</string>
    <string name="title_user_topic">发帖</string>
    <string name="title_user_reply">回帖</string>
    <string name="title_user_follow">关注列表</string>
    <string name="title_user_favorite">收藏列表</string>

    <!--    Node-->
    <string name="title_node_details">节点</string>
    <string name="all_node">所有节点</string>

    <!--    Common-->
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="error_invalid_params">参数错误</string>
    <string name="error_data_load_failed">数据加载错误</string>
    <string name="error_request_failed">请求失败，请稍后重试 </string>

    <string name="level_admin">管理员</string>
    <string name="level_maintainer">版主</string>
    <string name="level_member">会员</string>
    <string name="level_blacked">禁言</string>
    <string name="level_other">其它</string>
</resources>