<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout style="@style/AppBarLayoutStyle">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/settings_toolbar"
            style="@style/ToolBarStyle"
            app:navigationIcon="@null"
            app:title="@string/tab_me" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/settings_account_layout"
        style="@style/AppCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_vertical"
        android:background="@drawable/bg_selector_surface"
        android:gravity="center_vertical"
        android:padding="@dimen/keyline_vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/settings_account_avatar"
            android:layout_width="@dimen/avatar_size_48"
            android:layout_height="@dimen/avatar_size_48"
            android:contentDescription="@string/account_avatar_contd"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:shapeAppearance="@style/TopicAvatarStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/keyline_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/settings_account_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_to_login" />

            <TextView
                style="@style/CommonDescAppearance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false"
                android:text="w2solo.com" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/settings_rules"
        style="@style/OptionItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/keyline_8"
        android:text="@string/w2solo_rules" />

    <TextView
        android:id="@+id/settings_group"
        style="@style/OptionItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:text="@string/group_guide" />

    <TextView
        android:id="@+id/settings_products"
        style="@style/OptionItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:text="@string/group_products" />

    <TextView
        android:id="@+id/settings_tuxiaochao"
        style="@style/OptionItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:text="@string/app_feedback"
        android:visibility="gone" />

    <TextView
        style="@style/CommonDescAppearance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:maxLines="6"
        android:padding="40dp"
        android:singleLine="false"
        android:text="@string/w2solo_intro" />
</LinearLayout>