<?xml version="1.0" encoding="utf-8"?>
<com.w2solo.android.ui.commentbar.CommentBar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/comment_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_selector_surface"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/common_divider" />

    <TextView
        android:id="@+id/comment_bar_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/keyline_horizontal"
        android:paddingTop="4dp"
        android:paddingRight="@dimen/keyline_horizontal"
        android:paddingBottom="4dp"
        android:text="@string/comment_option_edit"
        android:textStyle="bold"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/keyline_horizontal"
        android:paddingRight="@dimen/keyline_horizontal">

        <EditText
            android:id="@+id/comment_bar_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_input_comment"
            android:minHeight="42dp"
            android:textSize="@dimen/text_size_14" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/comment_bar_send"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:minWidth="32dp"
            android:text="@string/comment_send"
            android:textColor="@color/text_color_button_send" />
    </LinearLayout>
</com.w2solo.android.ui.commentbar.CommentBar>